hphp/hack/test/typecheck/class_abstract_final_11_bad_position.php
<?hh

abstract final class C2 {
  public static function m(): void {
    new static(); // error
  }
}
